--- a/bookmarks/account/templates/account/login.html
+++ b/bookmarks/account/templates/account/login.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1>Log-in</h1>
     <p>Please use the following form to Log-in</p>
-    <form method="post" action = "{% url 'account:login' %}" >
+    <form method="post" action = "{% url 'login' %}" >
         {{ form.as_p }}
         {% csrf_token %}
         <p><input type="submit" value="Log in" ></p>
