--- a/bookmarks/account/templates/base.html
+++ b/bookmarks/account/templates/base.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div id="header">
-        <span class="logo">Bookmarks</span>
+        <span class="logo"> Bookmarks </span>
         <div id="header">
             {% if request.user.is_authenticated %}
                 <ul class="menu">
                     <li {% if section == "dashboard" %} class="selected" {% endif %}>
-                        <a href=" {% url 'account:dashboard' %}">My dashboard</a>
+                        <a href=" {% url 'dashboard' %}">My dashboard</a>
                     </li>
 
                     <li  {% if section == "images" %} class="selected"  {% endif %}>
@@ -30,9 +30,9 @@
             <span class="user">
                 {% if request.user.is_authenticated %}
                   Hello {{ request.user.first_name }},
-                  <a href="{% url 'account:logout' %}">Logout</a>
+                  <a href="{% url 'logout' %}">Logout</a>
                 {% else %}
-                  <a href="{% url 'account:login' %}">Log-in</a>
+                  <a href="{% url 'login' %}">Log-in</a>
                 {% endif %}
             </span>
         </div>
