Created an authentication system

--- a/bookmarks/account/templates/account/login.html
+++ b/bookmarks/account/templates/account/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %} Log-in {% endblock %}</title>
+<title>{% block title %} Log-in {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
 {% block content %}
