--- a/bookmarks/account/templates/base.html
+++ b/bookmarks/account/templates/base.html
@@ -21,7 +21,7 @@
                         <a href="#">Images</a>
                     </li>
 
-                    <li {% if section == people %} class="selected"  {% endif %}>
+                    <li {% if section == "people" %} class="selected"  {% endif %}>
                         <a href="#">People</a>
                     </li>
                 </ul>
